--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orderexecutionengine",
+  "name": "jivesh",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^11.2.0",
+    "@fastify/static": "^8.3.0",
     "@fastify/websocket": "^11.2.0",
     "@types/ws": "^8.18.1",
     "bullmq": "^5.66.0",
